--- a/SL/hw3/task4.Rmd
+++ b/SL/hw3/task4.Rmd
@@ -1,4 +1,4 @@
-Title
+Задание 1.4.(stepCV)
 ========================================================
 Задание 1.4. Написать на R функцию stepCV, аналогичную stepAIC, но использующую кросс-валидацию для проверки значимости признака. Нужно следовать при этом принципу иерархии — нельзя выкидывать признаки более низкого порядка, если есть признаки более высокого. Функция должна работать со всеми методами, с которыми работает stepAIC.
 
@@ -10,14 +10,15 @@ library(e1071)
 library(rmarkdown)
 ```
 
-```{r results='asis'}
+```{r}
 source("stepCV.R")
 ```
 
-Пример
+Пример посложнее
 
 ```{r}
-l <- lm(y~. , epil)
+Advertising <- read.csv("data/Advertising.csv")
+l <- lm(Sales~. , Advertising)
 stepCV(l, trace = TRUE)
 ```
 
@@ -25,3 +26,5 @@ stepCV(l, trace = TRUE)
 ```{r}
 stepAIC(l, trace = TRUE)
 ```
+
+Результаты получаются разные (Sales~X + Newspaper при вызове stepCV, при вызове stepAIC - другой результат)
