--- a/SL/hw3/task4.Rmd
+++ b/SL/hw3/task4.Rmd
@@ -7,7 +7,6 @@ Hint: Можно расковырять оригинальную функцию 
 ```{r}
 library(MASS)
 library(e1071)
-library(rmarkdown)
 ```
 
 ```{r}
@@ -17,9 +16,11 @@ source("stepCV.R")
 Пример посложнее
 
 ```{r}
-Advertising <- read.csv("data/Advertising.csv")
+Advertising <- read.csv("data/Advertising.csv")[, - c(1)]
 l <- lm(Sales~. , Advertising)
-stepCV(l, trace = TRUE)
+stepCV(l, trace = TRUE, direction="backward", data = Advertising)
+stepCV((lm(Sales~1, Advertising)), trace = TRUE, direction="forward", scope=Sales~I(Radio*Newspaper) + Radio + TV, data = Advertising )
+stepCV((lm(Sales~TV+Radio, Advertising)), trace = TRUE, direction="both", scope=list(lower=Sales~1, upper=Sales~I(Radio*Newspaper) + Radio + TV), data = Advertising)$anova
 ```
 
 Можно сравнить результат с stepAIC:
@@ -27,4 +28,5 @@ stepCV(l, trace = TRUE)
 stepAIC(l, trace = TRUE)
 ```
 
-Результаты получаются разные (Sales~X + Newspaper при вызове stepCV, при вызове stepAIC - другой результат)
+Результаты получаются разные.
+
