updated text+added 2nd preprocessor

--- a/SL/hw5/test.Rmd
+++ b/SL/hw5/test.Rmd
@@ -1,3 +1,20 @@
+mnist
+========
+
+Пробовала deskewing, не похоже, что сильно помогло. Пробовала применять фильтры. Стало еще медленней и результаты ухудшились.
+
+Затем мне надоело, что приходится подолгу дожидаться результатов, и я решила обрезать края у цифр и центрировать сами цифры, чтобы сократить количество предикторов и время вычислений. На полученном датасете результаты ухудшились не сильно (точность предсказания осталась на уровне примерно 4%), поэтому решила дальше работать именно с таким, обработанным набором данных. Код, который использовала для обработки:
+
+[Обработчик 1]: preprocessor.R (код1)
+
+Результаты deskewing и фильтров не сильно улучшились. Тут я подумала, что имеет смысл добавить немного своих предикторов. А начать с очень простого соображения: что мы знаем про цифры? - у некоторых есть кружочки, у некоторых нет (даже в разных формах написания). Поэтому я посчитала для всех цифр количество связных областей на картинке, не окрашенных в какой-либо цвет (при этом фон картинки справа считается связным с фоном картинки слева, аналогично сверху и снизу):
+
+[Обработчик 2]: preprocessor_2.R (код2)
+
+для определения связных участков использовала простой рекурсивный алгоритм заливки контура (раскрашивала найденную область ненулевым цветом и увеличивала счетчик связных областей на 1).
+
+Следующая идея - поворачивать циферки так, чтобы они были максимально "узкими". Это поможет выровнять все 1 (пока не реализовано)
+
 ```{r}
 rm(list = ls(all.names = TRUE))
 library(e1071)
@@ -112,6 +129,13 @@ tn.qda <- tune(qda, y ~ ., data = mnist.train.nz.jittered,
                tunecontrol = tune.control(cross = 2))
 
 summary(tn.qda)
+table(actual = mnist.train$y,
+      predicted = predict(tn.qda$best.model)$class)
+tt <- table(actual = mnist.test$y,
+            predicted = predict(tn.qda$best.model, mnist.test)$class)
+print(tt)
+1 - sum(diag(tt)) / sum(tt)
+
 
 tn.pcaqda <- tune(pcaqda, y ~ ., data = mnist.train.nz,
                   scale = FALSE, center = TRUE,# ranges = list(ncomp = c(1, 10, 20, 40, 50)),
