--- a/SL/hw5/test.Rmd
+++ b/SL/hw5/test.Rmd
@@ -5,11 +5,11 @@ mnist
 
 Затем мне надоело, что приходится подолгу дожидаться результатов, и я решила обрезать края у цифр и центрировать сами цифры, чтобы сократить количество предикторов и время вычислений. На полученном датасете результаты ухудшились не сильно (точность предсказания осталась на уровне примерно 4%), поэтому решила дальше работать именно с таким, обработанным набором данных. Код, который использовала для обработки:
 
-[Обработчик 1]: preprocessor.R (код1)
+[Обработчик 1](preprocessor.R)
 
 Результаты deskewing и фильтров не сильно улучшились. Тут я подумала, что имеет смысл добавить немного своих предикторов. А начать с очень простого соображения: что мы знаем про цифры? - у некоторых есть кружочки, у некоторых нет (даже в разных формах написания). Поэтому я посчитала для всех цифр количество связных областей на картинке, не окрашенных в какой-либо цвет (при этом фон картинки справа считается связным с фоном картинки слева, аналогично сверху и снизу):
 
-[Обработчик 2]: preprocessor_2.R (код2)
+[Обработчик 2](preprocessor_2.R)
 
 для определения связных участков использовала простой рекурсивный алгоритм заливки контура (раскрашивала найденную область ненулевым цветом и увеличивала счетчик связных областей на 1).
 
@@ -27,20 +27,24 @@ source("mnist.r") # http://yann.lecun.com/exdb/mnist/
 
 train <- load_image_file2('mnist/train-data.changed')
 train$y <- load_label_file('mnist/train-labels.changed')
+train$cc <- load_label_file('mnist/train-data.connected.comp')
 
-mnist.train <-data.frame(y=train$y, x=train$x)
+mnist.train <-data.frame(y=train$y, c=train$cc, x=train$x)
 
 test<- load_image_file2('mnist/test-data.changed')
 test$y <- load_label_file('mnist/test-labels.changed')
+test$cc <- load_label_file('mnist/test-data.connected.comp')
 
-mnist.test <- data.frame(y=test$y, x=test$x)
+mnist.test <- data.frame(y=test$y, c=test$cc, x=test$x)
 
 maxwidth <- max(train$ncol, test$ncol)
 maxheight <- max(train$nrow, test$nrow)
 
 mnist.train$y <- factor(mnist.train$y)
+#mnist.train$c <- factor(mnist.train$c)
 
 mnist.test$y <- factor(mnist.test$y)
+#mnist.test$c <- factor(mnist.test$c)
 
 
 deskew <- function(df, mincol=1, maxcol=ncol(df), threshold=1.10) {
@@ -79,13 +83,13 @@ show_digit <- function(arr784, col = gray(12:1/12), ...) {
 
 ```{r}
 
-show_digit(as.matrix(mnist.train[1, -1]), main = mnist.train[1, 1])
-show_digit(as.matrix(mnist.train[2, -1]), main = mnist.train[2, 1])
-show_digit(as.matrix(mnist.train[11, -1]), main = mnist.train[11, 1])
+show_digit(as.matrix(mnist.train[1, -c(1, 2)]), main = mnist.train[1, 1])
+show_digit(as.matrix(mnist.train[2, -c(1, 2)]), main = mnist.train[2, 1])
+show_digit(as.matrix(mnist.train[11, -c(1, 2)]), main = mnist.train[11, 1])
 
-sds <- sapply(mnist.train, sd)
-zero.sd <- names(mnist.train)[sds < 2 ]
-mnist.train.nz <- mnist.train[, setdiff(names(mnist.train), zero.sd)]
+#sds <- sapply(mnist.train, sd)
+#zero.sd <- names(mnist.train)[sds < 2 ]
+mnist.train.nz <- mnist.train #[, setdiff(names(mnist.train), zero.sd)]
 
 #sds2 <- sapply(mnist.train.nz, sd)
 #zero.sd2 <- names(mnist.train.nz)[sds2 < 2 ][-1]
@@ -100,10 +104,10 @@ mnist.train.nz <- mnist.train[, setdiff(names(mnist.train), zero.sd)]
 ```
 
 ```{r}
-mnist.train.nz.jittered <- mnist.train.nz
-mnist.train.nz.jittered[, -1] <- apply(mnist.train.nz[, -1], 2, jitter)
+#mnist.train.nz.jittered <- mnist.train.nz
+#mnist.train.nz.jittered[, -c(1,2)] <- apply(mnist.train.nz[, -c(1,2)], 2, jitter)
 
-tn.lda <- tune(lda, y ~ ., data = mnist.train.nz.jittered,
+tn.lda <- tune(lda, y ~ ., data = mnist.train.nz,
                predict.func = predict.pcalda, tunecontrol = tune.control(cross = 2))
 summary(tn.lda)
 table(actual = mnist.train$y, predicted = predict(tn.lda$best.model, mnist.train)$class)
@@ -124,7 +128,7 @@ predict.pcaqda <- function(...) predict(...)$class
 
 
 
-tn.qda <- tune(qda, y ~ ., data = mnist.train.nz.jittered,
+tn.qda <- tune(qda, y ~ ., data = mnist.train.nz,
                predict.func = predict.pcaqda,
                tunecontrol = tune.control(cross = 2))
 
